# ALT-index

./: CMakeLists.txt  README.md  main.cpp
examples/: base.cpp  multithreaded.cpp
include/: alt_index.h  artolc.h  concurrency.h  gpl.h  linear_model.h  utils.h
include/OptimizedART/: FastPointerBuffer.h  LICENSE  N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
test/: unittest_search.cpp
